tests/fail/conflicting_state_attr.stderr
error: Conflicting attributes are declared.
 --> $DIR/conflicting_state_attr.rs:9:5
  |
9 |     #[state]
  |     ^^^^^^^^
